html overflow, fix page scrolling issue

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,10 @@
     padding: 0;
 }
 
+html { 
+	overflow-x:hidden; 
+}
+
 body {
     background-color: #fafafa;
     font-family: 'Roboto', sans-serif;    
